bunch of improvements

--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -267,12 +267,10 @@ p {
 }
 .effect-3d #game-table-container {
 	-webkit-perspective: 2000px;
-	-moz-perspective: 2000px;
 	-ms-perspective: 2000px;
 	-o-perspective: 2000px;
 	perspective: 2000px;
 	-webkit-perspective-origin: 50% 40%;
-	-moz-perspective-origin: 50% 40%;
 	-ms-perspective-origin: 50% 40%;
 	-o-perspective-origin: 50% 40%;
 	perspective-origin: 50% 40%;
@@ -2236,7 +2234,7 @@ input[type=submit], input[type=submit]:hover, button, .button, .button:hover {
 	left: 0;
 	width: 965px;
 	z-index: 100;
-	height: 300px;
+	height: 600px;
 }
 .shelf .card_details h3, .shelf .card_details h5, .shelf .card_details h6 { background: none; padding-left: 5px; text-shadow: 1px 1px 1px rgba(0, 0, 0,0.3); color: #222; }
 .shelf .card_details h6 { font-size: 0.8em; margin-bottom: 0; padding-bottom: 0; }
@@ -2309,7 +2307,11 @@ li.cards { list-style: none; }
 	-o-transition: none;
 	transition: none;
 }
-.card.small { height: 130px; width: 100px; }
+.card.small { 
+	height: 130px; 
+	width: 100px; 
+	overflow: visible;
+}
 .card.medium { 
 	height: 214px;
 	width: 160px;
@@ -2388,13 +2390,25 @@ li.cards { list-style: none; }
 	transform: translateX(70px) translateY(-70px);
 }
 .card.creature {
-    background-image: url('/images/card_white.png');
+    background-image: url('/images/card_white_normal.png');
+}
+.card.creature.medium {
+    background-image: url('/images/card_white_medium.png');
+}
+.card.creature.small {
+    background-image: url('/images/card_white_small.png');
 }
 .card.event {
     background-image: url('/images/card_blue.png');
 }
 .card.item {
-    background-image: url('/images/card_red.png');
+    background-image: url('/images/card_red_normal.png');
+}
+.card.item.medium {
+    background-image: url('/images/card_red_medium.png');
+}
+.card.item.small {
+    background-image: url('/images/card_red_small.png');
 }
 .card.flipped, .card.event.flipped, .card.item.flipped, .card.item.flipped {
     background-image: url('/images/card_flipside_normal.png');
