--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -1,10 +1,10 @@
 
-/*@import url('http://fonts.googleapis.com/css?family=Metamorphous');
+@import url('http://fonts.googleapis.com/css?family=Metamorphous');
 @import url('http://fonts.googleapis.com/css?family=Fredericka+the+Great');
 @import url('http://fonts.googleapis.com/css?family=Amaranth:400,700,400italic,700italic');
 @import url('http://fonts.googleapis.com/css?family=Open+Sans:400,700,400italic,700italic');
 @import url('http://fonts.googleapis.com/css?family=Gentium+Basic:400,700italic,700,400italic');
-@import url('http://fonts.googleapis.com/css?family=Calligraffitti');*/
+@import url('http://fonts.googleapis.com/css?family=Calligraffitti');
 
 /*
 html5doctor.com Reset Stylesheet
